exception-handling/test/core/tag.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
  "\00\00\60\01\7f\00\60\02\7f\7d\00\0d\89\80\80\80"
  "\00\04\00\00\00\01\00\01\00\02\07\8b\80\80\80\00"
  "\02\02\74\32\04\02\02\74\33\04\03"
)
(register "test")
(module binary
  "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
  "\01\7f\00\60\02\7f\7d\00\02\97\80\80\80\00\02\04"
  "\74\65\73\74\02\74\32\04\00\00\04\74\65\73\74\02"
  "\74\33\04\00\01"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\0d\83\80\80\80\00\01\00\00"
  )
  "non-empty tag result type"
)
